mejoras en el formulario de heroes, haciendo indtroducciones multiples dinamicamente

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
         <nav class="topbar">
             <a href="heroes.php">Heroes</a>
             <a href="#">Objetos</a>
-            <a href="formularioheores.php">Tutoriales</a>
+            <a href="#">Tutoriales</a>
+            <a href="formularioheores.php">Añadir</a>
             <!-- <ul>
                 <li><a href="#">Heroes</a></li>
                 <li><a href="#">Objetos</a></li>
